<resources>
    <string name="app_name">Light Dark Mode Demo</string>
    <string name="welcome_to_app_mode">Welcome To App Mode</string>
    <string name="main_activity">Main Activity</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_mode">System UI Mode</string>
    <string name="the_night_has_fallen">The Night has Fallen</string>
    <string name="male">Male</string>
    <string name="choose_your_gender">Choose Your Gender</string>
    <string name="female">Female</string>
    <string name="No">No</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="save">Save</string>
    <string name="bottom_sheet_peek">Bottom Sheet Peek</string>
    <string name="bottom_sheet_content">Bottom Sheet Content</string>
    <string name="STATE_DRAGGING">STATE DRAGGING</string>
    <string name="STATE_EXPANDED">STATE EXPANDED</string>
    <string name="STATE_COLLAPSED">STATE COLLAPSED</string>
    <string name="STATE_HALF_EXPANDED">STATE HALF EXPANDED</string>
    <string name="STATE_HIDDEN">STATE HIDDEN</string>
    <string name="STATE_SETTLING">STATE SETTLING</string>
    <string-array name="theme">
        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="bookmark">Bookmark</string>
    <string name="browse_more_file">Browse More File</string>
    <string name="rate_us">Rate us</string>
    <string name="send_feedback">Feedback &amp; Suggestion</string>
    <string name="share_this_app">Share App</string>
</resources>