<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheets"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute,ContentDescription">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_height="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@drawable/bg_corners" />

        <TextView
            android:id="@+id/tv_more_menu_file"
            android:text="@string/browse_more_file"
            app:drawableStartCompat="@drawable/ic_file_browse"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center|start"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/tv_more_menu_favourite"
            android:text="@string/bookmark"
            app:drawableStartCompat="@drawable/ic_bookmark_remove"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center|start"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceBody1" />

        <View
            android:alpha="0.03"
            android:background="?colorOnSurface"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/switch_dark_mode"
                android:text="@string/dark_mode"
                app:drawableStartCompat="@drawable/ic_day_night"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_16"
                android:gravity="center|start"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:textColor="?android:attr/textColorPrimary"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_more_menu_share"
            android:text="@string/share_this_app"
            app:drawableStartCompat="@drawable/ic_share"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center|start"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/tv_more_menu_rate"
            android:text="@string/rate_us"
            app:drawableStartCompat="@drawable/ic_star"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center|start"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/tv_more_menu_feedback"
            android:text="@string/send_feedback"
            app:drawableStartCompat="@drawable/ic_help"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center|start"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/tv_more_menu_policy"
            android:text="@string/privacy_policy"
            app:drawableStartCompat="@drawable/ic_privacy"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center|start"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_version"
            android:alpha="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:textColor="?android:attr/textColorPrimary"
            android:textAppearance="?attr/textAppearanceCaption"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
